[package]
name = "warp-speed-oauth-server"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-session = { version = "0.8", features = ["cookie-session"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.5", features = ["v4", "serde"] }
base64 = "0.21"
sha2 = "0.10"

# OAuth dependencies
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "9"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Environment
dotenv = "0.15"

# Random & crypto
rand = "0.8"
argon2 = "0.5"