[package]
name = "warp-speed-server"
version = "1.0.0"
edition = "2021"
authors = ["Omega Studio Founders"]

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
base64 = "0.21"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
futures = "0.3"
anyhow = "1.0"
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true